# django-oidc-provider

./: pyproject.toml
example/app/: settings.py
