[tool.poetry]
name = "django-oidc-provider"
version = "0.7.0"
description = "OpenID Connect Provider implementation for Django."
authors = ["juanifioren <juanifioren@gmail.com>"]
packages = [
    { include = "oidc_provider" }
]

[tool.poetry.dependencies]
python = "^3.8"
#Django = "2.2"
pyjwkest = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true